<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--日期部分-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/top_day_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="@string/Today" />
            <TextView
                android:id="@+id/top_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="@string/Default_date" />
        </LinearLayout>

        <!--数据部分-->
        <TextView
            android:id="@+id/top_max_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:textColor="#ffffff"
            android:textSize="65dp"
            android:text="@string/Default_high" />

        <TextView
            android:id="@+id/top_min_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:text="@string/Default_low" />
    </LinearLayout>

    <!--图片部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/top_weather_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:src="@drawable/overcast_picture"/>
        <TextView
            android:id="@+id/top_weather_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="23dp"
            android:layout_marginLeft="75dp"
            android:text="@string/Weather_overcast" />

    </LinearLayout>


</LinearLayout>